generated/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-debian
  namespace: web-debian

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: nginx
        image: raihiba/web-debian:v1
        ports:
        - containerPort: 80
