generated/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: web-debian

spec:
  selector:
    app:  web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
