generated/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: web-debian

spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http
  namespace: web-debian

spec:
  podSelector:
    matchLabels:
      app: web

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 80
